Ana page geçici olarak düzenlendi auth pageler büyük çoğunlukla bitti

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>SporPlanet</title>
     <link rel="stylesheet" href="src/index.css" />
+    <link rel="icon" href="https://res.cloudinary.com/dppjlhdth/image/upload/v1745746418/SporPlanet_Transparent_Logo_hecyyn.png" />
   </head>
   <body>
     <div id="root"></div>
