home page turnuvalar footer ilanlarım finish

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SporPlanet</title>
     <link rel="stylesheet" href="src/index.css" />
-    <link rel="icon" href="https://res.cloudinary.com/dppjlhdth/image/upload/v1745746418/SporPlanet_Transparent_Logo_hecyyn.png" />
+    <link rel="icon" href="https://res.cloudinary.com/dppjlhdth/image/upload/v1749137675/SporPlanet_Transparent_Logo_Planet_oqmmcp.png" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
